--- a/09fullpage/index.html
+++ b/09fullpage/index.html
@@ -309,8 +309,7 @@
                                     <span>*당첨자 별도 연락</span>
                                 </div>
                             </div>
-                            <!-- <a href="#!" class="btn d-lg-none d-block">신청하기</a> -->
-                            <div class="btn d-md-none" id="btn03">신청하기</div>
+                            <div class="btn d-lg-none" id="btn03">신청하기</div>
                         </div>
                     </div>
                     <div class="col-6 p-0 d-none d-lg-block">
@@ -642,7 +641,7 @@
                             <div class="blog mr-2"><a href="https://blog.naver.com/fursys_official">blog</a></div>
                             <div class="facebook mr-2"><a href="https://www.facebook.com/fursys.official">facebook</a></div>
                             <div class="instagram mr-2"><a href="https://www.instagram.com/fursys.official">instagram</a></div>
-                            <div class="youtube"><a href="https://www.youtube.com/c/fursys_official">youtube</a></div>
+                            <div class="youtube-btn"><a href="https://www.youtube.com/c/fursys_official">youtube</a></div>
                         </div>
                     </div>
                 </div>
