--- a/gabia/index.html
+++ b/gabia/index.html
@@ -11,8 +11,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="css/animate.css">
 
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+    <script src="js/wow.js"></script>
+    <script>
+        new WOW().init();
+    </script>
 </head>
 <body>
     <div id="header">
@@ -105,8 +110,8 @@
     </div>
     <div id="section1">
         <div class="sec1U_Wrap">
-            <h3>해외 마켓 전문가가<br>수출을 도와드립니다</h3>
-            <ul class="clearfix">
+            <h3 class="wow fadeInUp">해외 마켓 전문가가<br>수출을 도와드립니다</h3>
+            <ul class="clearfix wow fadeInUp" data-wow-delay="0.2s" data-wow-offset="200">
                 <li class="clearfix">
                     <div class="u_left">
                         <img src="images/sec1logo_amazon.png" alt="">
@@ -128,8 +133,8 @@
             </ul>
         </div>
         <div class="sec1B_Wrap">
-            <h3>글로벌 쇼핑몰 제작,<br>국내몰 운영도 가능합니다</h3>
-            <ul class="clearfix">
+            <h3 class="wow fadeInUp" data-wow-delay="0" data-wow-offset="200">글로벌 쇼핑몰 제작,<br>국내몰 운영도 가능합니다</h3>
+            <ul class="clearfix wow fadeInUp" data-wow-delay="0.2s" data-wow-offset="200">
                 <li class="clearfix">
                     <div class="u_left">
                         <img src="images/sec1logo_shoppingmall.png" alt="">
@@ -155,33 +160,33 @@
     </div>
     <div id="section2">
         <div class="sec2_Wrap clearfix">
-            <h3>가비아 글로벌이<br>더 특별한 이유</h3>
+            <h3 class="wow fadeInUp" data-wow-delay="0" data-wow-offset="200">가비아 글로벌이<br>더 특별한 이유</h3>
             <ul class="clearfix">
-                <li class="clearfix">
+                <li class="clearfix wow fadeInUp" data-wow-delay="0" data-wow-offset="200">
                     <img src="images/ico_special1.png" alt="">
                     <p>
                         중진공 온라인 수출 지원사업<br>6년 연속 공식 수행기관
                     </p>
                 </li>
-                <li class="clearfix">
+                <li class="clearfix wow fadeInUp" data-wow-delay="0" data-wow-offset="200">
                     <img src="images/ico_special2.png" alt="">
                     <p>
                         알리바바 닷컴 한국 공식 파트너<br>2019년 한국 파트너사<br>종합 평가 1위
                     </p>
                 </li>
-                <li class="clearfix">
+                <li class="clearfix wow fadeInUp" data-wow-delay="0.2s" data-wow-offset="200">
                     <img src="images/ico_special3.png" alt="">
                     <p>
                         중소벤처기업부 지정<br>수출유망중소기업
                     </p>
                 </li>
-                <li class="clearfix">
+                <li class="clearfix wow fadeInUp" data-wow-delay="0.2s" data-wow-offset="200">
                     <img src="images/ico_special4.png" alt="">
                     <p>
                         수출바우처 사업<br>공식 수행기관
                     </p>
                 </li>
-                <li class="clearfix">
+                <li class="clearfix wow fadeInUp" data-wow-delay="0.4s" data-wow-offset="200">
                     <img src="images/ico_special5.png" alt="">
                     <p>
                         산업통산자원부, 한국무역협회 지정<br>전문무역상사
@@ -192,10 +197,10 @@
     </div>
     <div id="section3">
         <div class="sec3_Wrap">
-            <h3>간단한 궁금증이라도 지금 바로 확인해보세요</h3>
-            <p>가비아CNS의 해외 마켓 전문가가 답변을 드립니다.</p>
-            <h4>070-4331-5361</h4>
-            <button>
+            <h3 class="wow fadeInUp" data-wow-delay="0" data-wow-offset="200">간단한 궁금증이라도 지금 바로 확인해보세요</h3>
+            <p class="wow fadeInUp" data-wow-delay="0.1s" data-wow-offset="200">가비아CNS의 해외 마켓 전문가가 답변을 드립니다.</p>
+            <h4 class="wow fadeInUp" data-wow-delay="0.2s" data-wow-offset="200">070-4331-5361</h4>
+            <button class="wow fadeInUp" data-wow-delay="0.3s" data-wow-offset="200">
                 <p>상담하기</p>
             </button>
         </div>
@@ -203,7 +208,7 @@
     <div id="section4">
         <div class="sec4_Wrap">
             <h3>가비아 글로벌의 새소식</h3>
-            <ul class="clearfix">
+            <ul class="clearfix wow fadeIn" data-wow-offset="200">
                 <li><a href="#">
                     <img src="images/sec4_01.jpeg" alt="">
                     <div class="tag">
